--- a/proto.html
+++ b/proto.html
@@ -721,6 +721,7 @@ function ruleGood(bX, bY) {
 		goodPaper.fillColor = goodPaperColour;
 		
 		// George - put your sound-effect code here for "Good" choices
+		// meh.
 		
 	}
 	
