--- a/proto.html
+++ b/proto.html
@@ -15,105 +15,18 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="paper-full.min.js"></script>
-
+	
 </head>
 <body>
 	
 	<div data-role="page" id="menu">
-		<div id="menubtns">
-			<a href="#play">Play</a>
-			<a href="#options">Options</a>
-		</div>
 		<canvas id="menuanima" width=3000 height=3000></canvas>
-		<script type = "text/paperscript" canvas = "menuanima">
-			var canvas = document.getElementById("menuanima");
-			var ctx = canvas.getContext('2d');
-			canvas.width = window.innerWidth;
-			canvas.height = window.innerHeight;
-			//document.getElementById("menuanima").style.background = 'white';
-			// The amount of circles we want to make:
-			var count = canvas.width/10;
-
-			// Create a symbol, which we will use to place instances of later:
-			var pathCircle = new Path.Circle({
-				center: [0, 0],
-				radius: 40,
-				fillColor: 'black',
-				strokeColor: 'grey'
-			});
-			var pathSquare = new Path.Rectangle({
-				point: [0, 0],
-				size: [35, 35],
-				fillColor: 'black',
-				strokeColor: 'grey'
-			});
-			var pathTriangle = new Path.RegularPolygon({
-				center: [0, 0],
-				sides: 3,
-				radius: 40,
-				fillColor: 'black',
-				strokeColor: 'grey'
-			});
-			var pathPentagon = new Path.RegularPolygon({
-				center: [0, 0],
-				sides: 5,
-				radius: 40,
-				fillColor: 'black',
-				strokeColor: 'grey'
-			});
-			var pathStar = new Path.Star({
-				center: [50, 50],
-				points: 5,
-				radius1: 40,
-				radius2: -40,
-				fillColor: 'black',
-				strokeColor: 'grey'
-			});
-			
-			//var symbol = new Symbol(path);
-
-			// Place the instances of the symbol:
-			for (var i = 0; i < count; i++) {
-				if(i % 2 == 0){
-					var symbol = new Symbol(pathCircle);
-				}
-				if(i % 5 == 0){
-					var symbol = new Symbol(pathSquare);
-				}
-				if(i % 7 == 0){
-					var symbol = new Symbol(pathTriangle);
-				}
-				if(i % 4 == 0){
-					var symbol = new Symbol(pathPentagon);
-				}
-				if(i % 9 == 0){
-					var symbol = new Symbol(pathStar);
-				}
-				// The center position is a random point in the view:
-				var center = Point.random() * screen.width;
-				var placedSymbol = symbol.place(center);
-				placedSymbol.scale(i / count);
-			}
-
-			// The onFrame function is called up to 60 times a second:
-			function onFrame(event) {
-				// Run through the active layer's children list and change
-				// the position of the placed symbols:
-				for (var i = 0; i < count; i++) {
-					var item = project.activeLayer.children[i];
-					
-					// Move the item 1/20th of its width to the right. This way
-					// larger circles move faster than smaller circles:
-					item.position.x += item.bounds.width / 100;
-
-					// If the item has left the view on the right, move it back
-					// to the left:
-					if (item.bounds.left > view.size.width) {
-						item.position.x = -item.bounds.width;
-					}
-				}
-			}
-		</script>
+		<div id="menubtns">
+			<a href="#play"><img src="pngBtns/PlayBtn.png" id="playbtn" /></a>
+			<a href="#tutorial"><img src="pngBtns/TutorialBtn.png" id="tutbtn" /></a>
+			<a href="#leaderboard"><img src="pngBtns/LBBtn.png" id="lbbtn" /></a>
+			<a href="#options"><img src="pngBtns/OptionsBtn.png" id="optionsbtn" /></a>
+		</div>
 	</div>
 	
 	<div data-role="page" id="play">
@@ -125,12 +38,12 @@
 		<p><span id = "memo4"></span>
 		<p><span id = "memo5"></span>
 		<audio preload="metadata" id="background" onloadeddata="setLowVolume()" autoplay loop> 
-  <source src="sound/time.mp3">
-</audio>
+		<source src="sound/time.mp3">
+		</audio>
 
-<button onclick="document.getElementById('background').play()">Play Music</button>
-<button onclick="document.getElementById('background').pause()">Pause Music</button>
-<button onclick="document.getElementById('background').pause(); document.getElementById('background').currentTime = 0;">Stop Music</button>
+		<button onclick="document.getElementById('background').play()">Play Music</button>
+		<button onclick="document.getElementById('background').pause()">Pause Music</button>
+		<button onclick="document.getElementById('background').pause(); document.getElementById('background').currentTime = 0;">Stop Music</button>
 	</div>
 	
 	<div data-role="page" id="options">
@@ -1088,6 +1001,131 @@ function setLowVolume() {
     myAudio.volume = 1.0; //Changed this to 0.5 or 50% volume since the function is called Set Half Volume ;)
 }
 
+</script>
+<!-- main menu script-->
+<script type = "text/paperscript" canvas = "menuanima">
+//button positioning
+	var playbutton = document.getElementById('playbtn');
+	playbutton.style.position = "absolute";
+	playbutton.style.left = window.innerWidth / 2 - 149.5;
+	playbutton.style.top = window.innerHeight / 2 - 48.5;
+	var tutbutton = document.getElementById('tutbtn');
+	tutbutton.style.position = "absolute";
+	tutbutton.style.left = window.innerWidth / 2 - 127.5;
+	tutbutton.style.top = window.innerHeight / 2 + 51.5;
+	var lbbutton = document.getElementById('lbbtn');
+	lbbutton.style.position = "absolute";
+	lbbutton.style.left = window.innerWidth / 2 - 127.5;
+	lbbutton.style.top = window.innerHeight / 2 + 135.5;
+	var optnbutton = document.getElementById('optionsbtn');
+	optnbutton.style.position = "absolute";
+	optnbutton.style.left = window.innerWidth / 2 - 40;
+	optnbutton.style.top = window.innerHeight / 2 + 219.5;
+	
+	//button hover functions
+	$(function() {
+		$("img")
+			.mouseover(function() { 
+				var src = $(this).attr("src").match(/[^\.]+/) + "Over.png";
+				$(this).attr("src", src);
+			})
+			.mouseout(function() {
+				var src = $(this).attr("src").replace("Over.png", ".png");
+				$(this).attr("src", src);
+			});
+	});
+	
+	//main menu resizing
+	var canvas = document.getElementById("menuanima");
+	var ctx = canvas.getContext('2d');
+	canvas.width = window.innerWidth;
+	canvas.height = window.innerHeight;
+	
+	//document.getElementById("menuanima").style.background = 'white';
+	// The amount of circles we want to make:
+	var count = canvas.width/10;
+
+	// Create a symbol, which we will use to place instances of later:
+	var pathCircle = new Path.Circle({
+		center: [0, 0],
+		radius: 40,
+		fillColor: 'black',
+		strokeColor: 'grey'
+	});
+	var pathSquare = new Path.Rectangle({
+		point: [0, 0],
+		size: [35, 35],
+		fillColor: 'black',
+		strokeColor: 'grey'
+	});
+	var pathTriangle = new Path.RegularPolygon({
+		center: [0, 0],
+		sides: 3,
+		radius: 40,
+		fillColor: 'black',
+		strokeColor: 'grey'
+	});
+	var pathPentagon = new Path.RegularPolygon({
+		center: [0, 0],
+		sides: 5,
+		radius: 40,
+		fillColor: 'black',
+		strokeColor: 'grey'
+	});
+	var pathStar = new Path.Star({
+		center: [50, 50],
+		points: 5,
+		radius1: 40,
+		radius2: -40,
+		fillColor: 'black',
+		strokeColor: 'grey'
+	});
+	
+	//var symbol = new Symbol(path);
+
+	// Place the instances of the symbol:
+	for (var i = 0; i < count; i++) {
+		if(i % 2 == 0){
+			var symbol = new Symbol(pathCircle);
+		}
+		if(i % 5 == 0){
+			var symbol = new Symbol(pathSquare);
+		}
+		if(i % 7 == 0){
+			var symbol = new Symbol(pathTriangle);
+		}
+		if(i % 4 == 0){
+			var symbol = new Symbol(pathPentagon);
+		}
+		if(i % 9 == 0){
+			var symbol = new Symbol(pathStar);
+		}
+		// The center position is a random point in the view:
+		var center = Point.random() * screen.width;
+		var placedSymbol = symbol.place(center);
+		placedSymbol.scale(i / count);
+	}
+
+	// The onFrame function is called up to 60 times a second:
+	function onFrame(event) {
+		// Run through the active layer's children list and change
+		// the position of the placed symbols:
+		for (var i = 0; i < count; i++) {
+			var item = project.activeLayer.children[i];
+			
+			// Move the item 1/20th of its width to the right. This way
+			// larger circles move faster than smaller circles:
+			item.position.x += item.bounds.width / 100;
+
+			// If the item has left the view on the right, move it back
+			// to the left:
+			if (item.bounds.left > view.size.width) {
+				item.position.x = -item.bounds.width;
+			}
+		}
+	}
+	
+	
 </script>
 
 </body>
