added back buttons and hover effects

--- a/proto.html
+++ b/proto.html
@@ -47,12 +47,21 @@
 	</div>
 	
 	<div data-role="page" id="options">
+		<a href="#" data-rel="back">Go Back</a>
 		<div id="content">
 			<div id="defaultval">
 				Volume: <span id="currentval">100</span>
 			</div>
 			<div id="defaultslide"></div>
 		</div><!-- end #content -->
+	</div>
+	
+	<div data-role="page" id="tutorial">
+		<a href="#" data-rel="back">Go Back</a>
+	</div>
+	
+	<div data-role="page" id="leaderboard">
+		<a href="#" data-rel="back">Go Back</a>
 	</div>
 
 
