--- a/proto.html
+++ b/proto.html
@@ -40,7 +40,7 @@
 		<audio preload="metadata" id="background" onloadeddata="setLowVolume()" autoplay loop> 
 		<source src="sound/time.mp3">
 		<div >
-			<a href="#pause"><img src="pngBtns/pauseBtn.png" id="pausebtn" /></a>
+			<a href="#options"><img src="pngBtns/pauseBtn.png" id="pausebtn" /></a>
 		</div>
 		</audio>
 
